Fix x overflow on Chrome

--- a/assets/index.css
+++ b/assets/index.css
@@ -48,6 +48,7 @@ body.light {
 body, h1, h2, h3, h4, p, li {
     margin: 0;
     color: var(--fg-color);
+    overflow-x: hidden;
 }
 
 body {
